# pi_mpi

./: .gitignore  .project  CMakeLists.txt  CMakeListspi.txt  MPI_script.rb  README.md  hello_mpi.c  hello_mpi.pbs  hello_mpi.pro  pi_mpi  pi_mpi.c  pi_mpi.pbs  rub_ex1.rb
